--- a/Controller/templates/videoRequest.html
+++ b/Controller/templates/videoRequest.html
@@ -14,8 +14,6 @@
 
     <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
 
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
@@ -38,9 +36,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- 사용자CSS -->
-<!--    <script src="{{ url_for('static', filename='js/signup.js') }}"></script>-->
+    <script src="{{ url_for('static', filename='js/signup.js') }}"></script>
     <script src="{{ url_for('static', filename='js/Location.js') }}"></script>
-
     <link rel="stylesheet" href="{{ url_for('static', filename='css/law.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/request.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">
@@ -101,7 +98,7 @@
                         <p>- 다만, <strong style="color:Tomato;">범죄의 수사와 공소의 제기 및 유지를 위하여 필요한 경우</strong> 또는 <strong style="color:Tomato;">법원의 재판업무 수행을 위하여 필요한 경우</strong>에는 이를 열람, 제공할 수 있습니다.<br><br>
                         <h5>2. 약관</h5><br>
                         <p>- 본 사용자는 해당 법적 고지를 이해하고 위반하지 않겠음을 동의해야 합니다. <br><br>
-<!--                        <h5>3. 테스트</h5>-->
+{#                        <h5>3. 테스트</h5>#}
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="document.getElementById('terms').checked = true">확인</button>
@@ -120,8 +117,7 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="cameraName"><strong>카메라ID 및 위치</strong></label>
-{#                                <button type="button" class="btn btn-secondary" data-bs-toggle="popover" data-bs-placement="right" data-bs-custom-class="custom-popover" data-bs-title="Camera Map" data-bs-content="지도">&#128269;</button>#}
-{#<!--                                <input id="cameraName" name="cameraName" type="text" class="form-control is-valid" value="{{ cameraName }}" readonly required>-->#}
+{#                                <input id="cameraName" name="cameraName" type="text" class="form-control is-valid" value="{{ cameraName }}" readonly required>#}
                                 &nbsp;
                                 <input id="cameraName" name="cameraName" type="text" class="form-control is-valid" value="esqure_01" readonly required> <!-- 로컬용  -->
                                 <button class="btn btn-primary btn-lg btn-block" name = "getLocationBtn" id="getLocationBtn" type="button" onclick="getLocation()">위치정보수집동의</button>
@@ -173,7 +169,7 @@
                         <hr>
                         <div class="mb-4">
                         </div>
-                        <button class="btn btn-primary btn-lg btn-block" type="submit" name = "button" onclick="getMapLocation()">제출</button>
+                        <button class="btn btn-primary btn-lg btn-block" type="submit" name = "button">제출</button>
                     </div>
                     </form>
                 </div>
@@ -186,20 +182,5 @@
     <!-- flatpicker (Timepicker) JS -->
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
-    <script>
-        // 버튼을 클릭할 때 이벤트 처리
-        document.getElementById('linkButton').addEventListener('click', function() {
-            // 이동할 페이지의 URL을 지정합니다.
-            var targetPageURL = '이동할_페이지의_URL_입력';
-
-            // 새 탭 또는 창에서 페이지를 엽니다.
-            window.open(targetPageURL, '_blank');
-        });
-
-        var popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
-        popoverTriggerList.forEach(function (popoverTriggerEl) {
-            new bootstrap.Popover(popoverTriggerEl);
-        });
-    </script>
 </body>
 </html>
